# esp-bridge-mcp-robot

./: .mcp.json  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: pip-face.md
.claude/hooks/: dispatch_expression.py  dispatch_mood.py  pip_react.py
docs/: make_gif.py
src/: .env.example  main.py  mcp_server.py
src/modules/: cli.py  demo.py  mcp_server.py  robot.py
src/modules/assistant/: brain.py  ollama_llm.py  robot.py  tools.py
src/modules/espbridge/: display.py  gps.py  setup_board.py
src/modules/espbridge/eyes/: __init__.py  activities.py  decor.py  engine.py  gestures.py  moods.py  primitives.py  record.py  spec.py
src/modules/espbridge/eyes/actions/: __init__.py  deploying.py  editing.py  glitch.py  listening.py  processing.py  scanning.py  smoking.py  sponsor.py  thinking.py  waiting.py  weather.py
src/modules/espbridge/eyes/gestures/: __init__.py
src/modules/espbridge/eyes/moods/: __init__.py  cat.py  happy.py  lovely.py  overheated.py  skeptical.py  sleepy.py
src/modules/espbridge/eyes/reactions/: __init__.py  acknowledge.py  cross_eyes.py  excited.py  laugh.py  nod.py  pop.py  refuse.py  roll.py  shiver.py  squint.py
src/modules/espbridge/eyes/vibes/: __init__.py  ascii_morph.py  barcode_scan.py  blackhole.py  boot_draw.py  campfire.py  cylon.py  defrag_blocks.py  dice_roll.py  emp_pulse.py  energy_blast.py  game_of_life.py  jackpot.py  matrix.py  overheated.py  pixel_decay.py  quantum.py  recording.py  snake.py  snore.py  solarflare.py  supernova.py  target_lock.py  warp.py  (+4 more)
src/modules/llm/: ollama_llm.py
(+8 files in other folders)
